dropshot/tests/fail/bad_trait_only17.stderr
error: macro `life_the_universe_and_everything` marked as endpoint is not a method
  --> tests/fail/bad_trait_only17.rs:18:5
   |
18 |     #[endpoint { method = GET }]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
